# NWM

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
examples/: cartpole_training.py  custom_environment.py  quickstart.py
nwm/: __init__.py
nwm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
nwm/agents/: __init__.py  nwm_agent.py
nwm/core/: __init__.py  centroid.py  potential_field.py
nwm/utils/: __init__.py  config.py
tests/: test_agent.py  test_centroid.py  test_potential_field.py
