[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nwm-rl"
version = "1.0.1"
description = "Negative Weight Mapping - A Reinforcement Learning framework using persistent potential fields"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "CusterMustOfficial"}
]
keywords = ["reinforcement-learning", "machine-learning", "ai", "potential-field", "exploration"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.20.0",
    "gymnasium>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
full = [
    "matplotlib>=3.5.0",
    "torch>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/nwm-research/nwm"
Documentation = "https://github.com/nwm-research/nwm#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["nwm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
